manifests/open-webui/Deployment-open-webui-pipelines.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/component: pipelines
    app.kubernetes.io/instance: open-webui
    app.kubernetes.io/name: pipelines
  name: open-webui-pipelines
  namespace: open-webui
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: pipelines
      app.kubernetes.io/instance: open-webui
  template:
    metadata:
      labels:
        app.kubernetes.io/component: pipelines
        app.kubernetes.io/instance: open-webui
        app.kubernetes.io/name: pipelines
    spec:
      automountServiceAccountToken: false
      containers:
        - image: ghcr.io/open-webui/pipelines:main
          imagePullPolicy: Always
          name: pipelines
          ports:
            - containerPort: 9099
              name: http
          tty: true
          volumeMounts:
            - mountPath: /app/pipelines
              name: data
      enableServiceLinks: false
      serviceAccountName: open-webui-pipelines
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: open-webui-pipelines
