manifests/open-webui/Deployment-open-webui-redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/component: open-webui-redis
    app.kubernetes.io/instance: open-webui
    app.kubernetes.io/name: open-webui
  name: open-webui-redis
  namespace: open-webui
spec:
  selector:
    matchLabels:
      app.kubernetes.io/component: open-webui-redis
      app.kubernetes.io/instance: open-webui
  template:
    metadata:
      labels:
        app.kubernetes.io/component: open-webui-redis
        app.kubernetes.io/instance: open-webui
        app.kubernetes.io/name: open-webui
    spec:
      containers:
        - image: redis:7.4.2-alpine3.21
          imagePullPolicy: IfNotPresent
          name: open-webui-redis
          ports:
            - containerPort: 6379
              name: http
