manifests/open-webui/StatefulSet-open-webui.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app.kubernetes.io/component: open-webui
    app.kubernetes.io/instance: open-webui
    app.kubernetes.io/name: open-webui
  name: open-webui
  namespace: open-webui
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: open-webui
      app.kubernetes.io/instance: open-webui
  serviceName: open-webui
  template:
    metadata:
      labels:
        app.kubernetes.io/component: open-webui
        app.kubernetes.io/instance: open-webui
        app.kubernetes.io/name: open-webui
    spec:
      automountServiceAccountToken: false
      containers:
        - env:
            - name: WEBUI_URL
              value: http://chat.cdbrdr.com
            - name: ENABLE_OLLAMA_API
              value: "False"
            - name: ENABLE_OPENAI_API
              value: "False"
            - name: ENABLE_WEBSOCKET_SUPPORT
              value: "True"
            - name: WEBSOCKET_MANAGER
              value: redis
            - name: REDIS_URL
              value: redis://open-webui-redis.open-webui.svc.cluster.local:6379/0
            - name: WEBSOCKET_REDIS_URL
              value: redis://open-webui-redis.open-webui.svc.cluster.local:6379/0
            - name: DATABASE_TYPE
              value: postgresql
            - name: DATABASE_HOST
              valueFrom:
                secretKeyRef:
                  key: databaseHost
                  name: openwebui-creds
            - name: DATABASE_USER
              valueFrom:
                secretKeyRef:
                  key: databaseUser
                  name: openwebui-creds
            - name: DATABASE_PASSWORD
              valueFrom:
                secretKeyRef:
                  key: databasePassword
                  name: openwebui-creds
            - name: DATABASE_NAME
              valueFrom:
                secretKeyRef:
                  key: databaseName
                  name: openwebui-creds
          image: ghcr.io/open-webui/open-webui:0.9.5-slim
          imagePullPolicy: IfNotPresent
          name: open-webui
          ports:
            - containerPort: 8080
              name: http
          tty: true
          volumeMounts:
            - mountPath: /app/backend/data
              name: data
              subPath: openwebui
      enableServiceLinks: false
      serviceAccountName: open-webui-sa
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: open-webui
