manifests/open-webui/Service-open-webui-pipelines.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: pipelines
    app.kubernetes.io/instance: open-webui
    app.kubernetes.io/name: pipelines
  name: open-webui-pipelines
  namespace: open-webui
spec:
  ports:
    - name: http
      port: 9099
      protocol: TCP
      targetPort: http
  selector:
    app.kubernetes.io/component: pipelines
    app.kubernetes.io/instance: open-webui
  type: ClusterIP
