manifests/open-webui/Service-open-webui-redis.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: open-webui-redis
    app.kubernetes.io/instance: open-webui
    app.kubernetes.io/name: open-webui
  name: open-webui-redis
  namespace: open-webui
spec:
  ports:
    - name: http
      port: 6379
      protocol: TCP
      targetPort: http
  selector:
    app.kubernetes.io/component: open-webui-redis
    app.kubernetes.io/instance: open-webui
  type: ClusterIP
