manifests/open-webui/Ingress-open-webui.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app.kubernetes.io/component: open-webui
    app.kubernetes.io/instance: open-webui
    app.kubernetes.io/name: open-webui
  name: open-webui
  namespace: open-webui
spec:
  ingressClassName: traefik
  rules:
    - host: chat.cdbrdr.com
      http:
        paths:
          - backend:
              service:
                name: open-webui
                port:
                  name: http
            path: /
            pathType: Prefix
